--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+## Example
+
+An example of this service is running at http://httpecho.heroku.com
+
+## License
+
 Copyright (c) 2011 Jamin Guy
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
